Fix style: Adjust width and text align in button,

--- a/svelte/src/app.css
+++ b/svelte/src/app.css
@@ -4,6 +4,6 @@
 
 @layer base {
   body {
-    @apply w-52 sm:w-80 m-auto text-foreground bg-background;
+    @apply w-full sm:w-80 m-auto text-foreground bg-background;
   }
 }
